Alignment fix

--- a/src/components/SectionCommunity/SectionCommunity.scss
+++ b/src/components/SectionCommunity/SectionCommunity.scss
@@ -9,7 +9,7 @@
 
 .community-item {
 
-  margin: 2rem;
+  margin: 1.5rem;
   a {
     text-decoration: none;
     &:hover {
